--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>Crablase</title>
+        <meta name="color-scheme" content="light dark"/>
         <link rel="stylesheet" href={% block css %}{% endblock %} />
         <link rel="icon" href="/cardstock.svg" />
     </head>
