Add base display
Works in the usual case, but does not currently support;
* hovering (though the hover target is there)
* the issue at https://reblase.sibr.dev/game/259150c5-e086-4d6c-b2da-80b576885059#e6d37189-3fff-95b2-a542-1266836a1f64

--- a/game.css
+++ b/game.css
@@ -341,6 +341,10 @@ header > button {
     grid-area: atbat;
 }
 
+.update-row__atbat__bases {
+    margin-block-start: -0.125rem;
+}
+
 /* page footer */
 
 .page-footer {
